# adv_python_homework_2

./: main.py  pyproject.toml
classes/: csv_file.py  parser.py  person.py
utils/: patterns.py
